# rusoto-example

./: Cargo.toml  README.md  ecs.bak
src/: client.rs  config.rs  credentials.rs  ecs.rs  errors.rs  main.rs
