[package]
name = "awsManagerRust"
version = "0.1.0"
authors = ["lucdew <848341+lucdew@users.noreply.github.com>"]

[dependencies]
dirs = "1.0"
error-chain = "0.12.0"
env_logger = "0.6"
rusoto_core = "0.36.0"
rusoto_credential = "0.15.0"
rusoto_ecs = "0.36.0"
rusoto_sts = "0.36.0"
futures = "0.1.16"
hyper = "0.12"
hyper-proxy = "0.5.0"
hyper-tls = "0.3.1"
log = "0.4"
read_input = "0.8.0"
regex = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-core = "0.1.7"
chrono = {version = "0.4.6", features = ["serde"] }
