[package]
name = "aws_list_ecs_images"
version = "0.2.0"
authors = ["lucdew <848341+lucdew@users.noreply.github.com>"]
edition = "2018"

[dependencies]
dirs = "2.0"
anyhow = "1.0"
clap = "3.0.0-beta.1"
console = "0.11"
dialoguer = "0.6"
env_logger = "0.6"
futures = "0.3"
hyper-proxy = "0.7"
hyper = { version = "0.13.6", features = ["runtime"] }
hyper-tls = "0.4"
rusoto_core = "0.44"
rusoto_credential = "0.44"
rusoto_ecs = "0.44"
rusoto_sts = "0.44"
log = "0.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["rt-core"] }
